--- a/index.html
+++ b/index.html
@@ -54,27 +54,51 @@
       <a class="second-btn">Learn more</a>
     </div>
   </section>
-  <section class="fourth-section">
+  <section class="row fourth-section">
+    <div class="col-6">
+      <img class="fourth-img" src="./images/desktop/image-graphic-design.jpg">
+    </div>
+    <div class="col-6">
+      <img class="fifth-img" src="./images/desktop/image-photography.jpg">
+    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+  </section>
+
+  <section class="fifth-section">
     <h3>
       Client testimonials
     </h3>
-    <div class="row">
-      <div class="col-3">
+    <div class="clients row">
+      <div class="client-1 col-3 text-center">
         <img class="client-img" src="./images/image-emily.jpg">
         <p class="client-desc">We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always hit.</p>
-        <span>Emily R., Marketing Director</span>
+        <span class="name">Emily R.</span><br>
+        <span class="client-position">Marketing Director</span>
       </div>
 
-      <div class="col-3">
+      <div class="client-2 col-3 text-center">
         <img class="client-img" src="./images/image-thomas.jpg">
         <p class="client-desc">Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success made it a satisfying and enjoyable experience.</p>
-        <span>Emily R., Marketing Director</span>
+        <span class="name">Thomas S.</span><br>
+        <span class="client-position">Chief Operating Officer</span>
       </div>
 
-      <div class="col-3">
+      <div class="client-3 col-3 text-center">
         <img class="client-img" src="./images/image-jennie.jpg">
         <p class="client-desc">Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended!</p>
-        <span>Emily R., Marketing Director</span>
+        <span class="name">Jennie F.</span><br>
+        <span class="client-position">Business Owner</span>
       </div>
       
     </div>
@@ -96,15 +120,8 @@
   Increase your credibility by getting the most stunning, high-quality photos that improve your business image.
 
 
-
-  Emily R.
-  Marketing Director
-
-  Thomas S.
-  Chief Operating Officer
-
-  Jennie F.
-  Business Owner
+  
+  
 
   About
   Services
