--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
   </style>
 </head>
 <body>
+
+  
   <header class="header">
     <img class="logo" src="./images/logo.svg" alt="Sunnyside agency logo">
     <ul class="navbar">
@@ -26,6 +28,8 @@
       <li><a href="#contact" class="active">Contact</a></li>
     </ul>
   </header>
+
+
   <section class="first-section">
     <img class="first-img" src="./images/desktop/image-header.jpg">
     <h1>We are creatives</h1>
@@ -43,6 +47,7 @@
     </div>
   </section>
 
+
   <section class="row third-section">
 
     <div class="col-6">
@@ -54,29 +59,29 @@
       <a class="second-btn">Learn more</a>
     </div>
   </section>
+
+
   <section class="row fourth-section">
     <div class="col-6">
       <img class="fourth-img" src="./images/desktop/image-graphic-design.jpg">
+      <div class="text">
+        <h3 class="graphic">Graphic Design</h3>
+        <p class="graphic-desc">Great design makes you memorable. We deliver artwork that underscores your brand message and captures potential clients’ attention.</p>
+      </div>
+
     </div>
     <div class="col-6">
       <img class="fifth-img" src="./images/desktop/image-photography.jpg">
+      <div class="text">
+        <h3 class="photography">Photography</h3>
+        <p class="photography-desc">Increase your credibility by getting the most stunning, high-quality photos that improve your business image.</p>
+      </div>
     </div>
-
-
-
-
-
-
-
-
-
-
-
-
   </section>
 
+
   <section class="fifth-section">
-    <h3>
+    <h3 class="title">
       Client testimonials
     </h3>
     <div class="clients row">
@@ -103,35 +108,47 @@
       
     </div>
   </section>
-  <!-- About
-  Services
-  Projects
-  Contact
 
 
+  <section class="images-section">
+    <div class="row roww">
+      <div class="col-3">
+        <img src="./images/desktop/image-gallery-milkbottles.jpg">
+      </div>
+      <div class="col-3">
+        <img src="./images/desktop/image-gallery-orange.jpg">
+      </div>
+      <div class="col-3">
+        <img src="./images/desktop/image-gallery-cone.jpg">
+      </div>
+      <div class="col-3">
+        <img src="./images/desktop/image-gallery-sugarcubes.jpg">
+      </div>
+    </div>
+  </section>
 
 
+  <footer>
+    <!-- <img class="footer-logo" src="./images/logo.svg"> -->
+    <h2 class="footer-logo">sunnyside</h2>
+    <ul class="footer-ul">
+      <li><a href="#about">About</a></li>
+      <li><a href="#services">Services</a></li>
+      <li><a href="#projects">Projects</a></li>
+    </ul>
+    <div class="icons">
+      <a href="#"><img src="./images/icon-facebook.svg"></a>
+      <a href="#"><img src="./images/icon-instagram.svg"></a>
+      <a href="#"><img src="./images/icon-twitter.svg"></a>
+      <a href="#"><img src="./images/icon-pinterest.svg"></a>
+    </div>
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="#">Nada</a>.
+    </div>
+  </footer>
 
 
-  Graphic design
-  Great design makes you memorable. We deliver artwork that underscores your brand message and captures potential clients’ attention.
-
-  Photography
-  Increase your credibility by getting the most stunning, high-quality photos that improve your business image.
-
-
-  
-  
-
-  About
-  Services
-  Projects
-  Contact -->
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
 
 
   <script src="./index.js"></script>
